# neurobids-flow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  debug_ann.py  main.py  neurobids_gui.py  pyproject.toml  test_wrapper_quick.py  tree.txt
.github/workflows/: ci.yml
bids_output/: dataset_description.json
bids_output/sub-01/ses-01/: sub-01_ses-01_scans.tsv
bids_output/sub-02/ses-01/: sub-02_ses-01_scans.tsv
bids_output/sub-03/ses-01/: sub-03_ses-01_scans.tsv
bids_output/sub-04/ses-01/: sub-04_ses-01_scans.tsv
configs/: default_config.yaml  splits.json
demo_bids_output/: dataset_description.json  participants.tsv
demo_bids_output/sub-01/ses-01/: sub-01_ses-01_scans.tsv
demo_bids_output/sub-02/ses-01/: sub-02_ses-01_scans.tsv
demo_bids_output/sub-03/ses-01/: sub-03_ses-01_scans.tsv
demo_bids_output/sub-04/ses-01/: sub-04_ses-01_scans.tsv
results/ssvep_benchmark/: nakanishi_results.json
results/target15/: brainproducts_results.txt  emotiv_results.txt  muse2_results.txt  openbci_results.txt
results/target15/metrics/: results.csv
sample_data/: generate_samples.py
src/eeg2bids_unify/: cli.py
src/eeg2bids_unify/core/: converter.py
src/eeg2bids_unify/plugins/: base.py  brainproducts.py  emotiv.py  (+3 more)
src/neurobids_flow/: __init__.py  braindecode_pipeline.py  cli.py  cross_device_eval.py  evaluate_nakanishi.py  moabb_wrapper.py  pipeline_demo.py  sklearn_pipeline.py  splits.py  torch_dataset.py
target15/: evaluate_dataset.py
tests/: test_ml_pipeline.py  test_moabb_wrapper.py  test_plugins.py  test_ssvep.py  test_torch_dataset.py
(+60 files in other folders)
